--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -19,11 +19,12 @@ jobs:
             - name: Build docker image
               run: docker build -t hardening-project-v2 . 
 
-            - name: Install trivy
-              run: | 
-               wget https://github.com/aquasecurity/trivy/releases/download/v0.18.3/trivy_0.18.3_Linux-64bit.deb \
-               sudo dpkg -i trivy_0.18.3_Linux-64bit.deb
-
-            - name: Run trivy scan
-              run: trivy image --exit-code 1 --severity HIGH,CRITICAL hardening-project-v2
-  
+            - name: Run Trivy vulnerability scanner
+              uses: aquasecurity/trivy-action@0.28.0
+              with:
+                image-ref: 'hardening-project-v2'
+                format: 'table'
+                exit-code: '1'
+                ignore-unfixed: true
+                severity: 'CRITICAL,HIGH'
+    
